<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewCreateProject"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_black"
    tools:context=".CreateProjects">




    <TextView
        android:id="@+id/txtSelectCategory"
        android:layout_width="160dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="156dp"
        android:text="Create a Project"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateProject"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="436dp"
        android:background="@color/purple_100"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewMan"
        android:layout_width="42dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/person_standing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="407dp"
        android:layout_height="399dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textProjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/project_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtProjectName"
                android:layout_width="390dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:hint="@string/project_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/category_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCategoryName"
                android:layout_width="390dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:hint="@string/category_name" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddProjectPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/icon_gallery"
                android:text="@string/add_project_photo"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textStartDate"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/start_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CalendarView
                android:id="@+id/startDateCalendar"
                android:layout_width="390dp"
                android:layout_height="254dp"
                android:background="@color/app_background_black"
                android:theme="@style/CustomCalendarView"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/txtStartDate"
                android:layout_width="239dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_calendar"
                android:hint="@string/start_date_dd_mm_yyyy"
                android:inputType="date"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textEndDate"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/end_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CalendarView
                android:id="@+id/endDateCalendar"
                android:layout_width="390dp"
                android:layout_height="254dp"
                android:background="@color/app_background_black"
                android:theme="@style/CustomCalendarView"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/endDate"
                android:layout_width="245dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_calendar"
                android:hint="@string/end_date_dd_mm_yyyy"
                android:inputType="date" />


            <TextView
                android:id="@+id/textHoursRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/hours_required"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <NumberPicker
                android:id="@+id/npHoursRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:solidColor="@color/purple_500"
                />

            <EditText
                android:id="@+id/txtHoursRequired"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:drawableEnd="@drawable/icon_clock"
                android:hint="Start Time"
                android:textSize="20sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textMin"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/minimum_daily_goal_hours"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center_horizontal"
                android:background="#d9d9d9"
                android:hint="@string/minimum_hours"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/maximum_daily_goal_hours"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMax"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#d9d9d9"
                android:hint="@string/maximum_hours"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <!-- Include layout -->
    <include
        android:id="@+id/include"
        layout="@layout/activity_base"
        android:layout_width="426dp"
        android:layout_height="732dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>