<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_black"
    tools:context=".ViewCategoriesActivity">

    <!-- Include layout -->
    <include
        android:id="@+id/include"
        layout="@layout/activity_base"
        android:layout_width="426dp"
        android:layout_height="732dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_man_standing"
        android:layout_width="53dp"
        android:layout_height="170dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/man_standing_with_arms_crossed"
        android:scaleType="centerCrop"
        android:src="@drawable/person_standing"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSelectProjectCategory"
        android:layout_width="147dp"
        android:layout_height="66dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="128dp"
        android:text="@string/select_a_category"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="36dp"
        android:text="@string/create_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ListView
        android:id="@+id/ltvCategories"
        android:background="@color/app_background_black"
        android:layout_width="329dp"
        android:layout_height="229dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>